/*
 * Copyright (c) 2020, Twilio Inc.
 */
package com.twilio.verify.models

enum class FactorType(val factorTypeName: String) {
  PUSH("push")
}